--- a/app/views/network/show_create_report.html.erb
+++ b/app/views/network/show_create_report.html.erb
@@ -19,34 +19,34 @@
               <fieldset class="selfclear">
                 <!-- PLEASE NOTE: These fields are currently in the order they appear on the report. We may decide to present them in some other order (like alphabetical), but the current approach isn't random -->
                 <div class="fourcol">
-                  <input type="checkbox" checked name="q[f[funds]]" value="1" /><label for="name">Funds</label><br />
-                  <input type="checkbox" checked name="q[f[fares]]" value="1" /><label for="name">Fares</label><br />
-                  <input type="checkbox" checked name="q[f[agency_other]]" value="1" /><label for="name">Agency Other</label><br />
-                  <input type="checkbox" checked name="q[f[vehicle_maint]]" value="1" /><label for="name">Vechicle Maint.</label><br />
-                  <input type="checkbox" checked name="q[f[donations_fares]]" value="1" /><label for="name">Donations Fares</label><br />
-                  <input type="checkbox" checked name="q[f[total]]" value="1" /><label for="name">Total</label>
+                  <input type="checkbox" checked name="q[f[funds]]" id="funds" value="1" /><label for="funds">Funds</label><br />
+                  <input type="checkbox" checked name="q[f[fares]]" id="fares" value="1" /><label for="fares">Fares</label><br />
+                  <input type="checkbox" checked name="q[f[agency_other]]" id="agency_other" value="1" /><label for="agency_other">Agency Other</label><br />
+                  <input type="checkbox" checked name="q[f[vehicle_maint]]" id="vehicle_maint" value="1" /><label for="vehicle_maint">Vechicle Maint.</label><br />
+                  <input type="checkbox" checked name="q[f[donations_fares]]" id="donations_fares" value="1" /><label for="donations_fares">Donations Fares</label><br />
+                  <input type="checkbox" checked name="q[f[total]]" id="total" value="1" /><label for="total">Total</label>
                 </div>
                 <div class="fourcol">
-                  <input type="checkbox" checked name="q[f[in_district_trips]]" value="1" /><label for="name">In District Rides</label><br />
-                  <input type="checkbox" checked name="q[f[out_of_district_trips]]" value="1" /><label for="name">Out of District Rides</label><br />
+                  <input type="checkbox" checked name="q[f[in_district_trips]]" id="in_district_trips" value="1" /><label for="in_district_trips">In District Rides</label><br />
+                  <input type="checkbox" checked name="q[f[out_of_district_trips]]" id="out_of_district_trips" value="1" /><label for="out_of_district_trips">Out of District Rides</label><br />
 
-                  <input type="checkbox" checked name="q[f[total_last_year]]" value="1" /><label for="name">Total this Period Last Year</label><br />
-                  <input type="checkbox" checked name="q[f[mileage]]" value="1" /><label for="name">Mileage</label><br />
-                  <input type="checkbox" checked name="q[f[volunteer_hours]]" value="1" /><label for="name">Volunteer Hours</label>
+                  <input type="checkbox" checked name="q[f[total_last_year]]" id="total_last_year" value="1" /><label for="total_last_year">Total this Period Last Year</label><br />
+                  <input type="checkbox" checked name="q[f[mileage]]" id="mileage" value="1" /><label for="mileage">Mileage</label><br />
+                  <input type="checkbox" checked name="q[f[driver_volunteer_hours]]" id="driver_volunteer_hours" value="1" /><label for="driver_volunteer_hours">Volunteer Hours</label>
                 </div>
                 <div class="fourcol">
-                  <input type="checkbox" checked name="q[f[paid_hours]]" value="1" /><label for="name">Paid Hours</label><br />
-                  <input type="checkbox" checked name="q[f[total_hours]]" value="1" /><label for="name">Total Hours</label><br />
-                  <input type="checkbox" checked name="q[f[cost_per_trip]]" value="1" /><label for="name">Cost/Trip</label><br />
-                  <input type="checkbox" checked name="q[f[cost_per_mile]]" value="1" /><label for="name">Cost/Mile</label><br />
-                  <input type="checkbox" checked name="q[f[cost_per_hour]]" value="1" /><label for="name">Cost/Hour</label>
+                  <input type="checkbox" checked name="q[f[driver_paid_hours]]" id="driver_paid_hours" value="1" /><label for="driver_paid_hours">Paid Hours</label><br />
+                  <input type="checkbox" checked name="q[f[driver_total_hours]]" id="driver_total_hours" value="1" /><label for="driver_total_hours">Total Hours</label><br />
+                  <input type="checkbox" checked name="q[f[cost_per_trip]]" id="cost_per_trip" value="1" /><label for="cost_per_trip">Cost/Trip</label><br />
+                  <input type="checkbox" checked name="q[f[cost_per_mile]]" id="cost_per_mile" value="1" /><label for="cost_per_mile">Cost/Mile</label><br />
+                  <input type="checkbox" checked name="q[f[cost_per_hour]]" id="cost_per_hour" value="1" /><label for="cost_per_hour">Cost/Hour</label>
                 </div>
                 <div class="fourcol">
-                  <input type="checkbox" checked name="q[f[turn_downs]]" value="1" /><label for="name">Turn Downs</label><br />
-                  <input type="checkbox" checked name="q[f[undup_riders]]" value="1" /><label for="name">Undup Riders</label><br />
-                  <input type="checkbox" checked name="q[f[escort_volunteer_hours]]" value="1" /><label for="name">Escort Hours</label><br />
-                  <input type="checkbox" checked name="q[f[admin_volunteer_hours]]" value="1" /><label for="name">Admin Hours</label><br />
-                  <input type="checkbox" checked name="q[f[total_hours]]" value="1" /><label for="name">Total Hours</label>
+                  <input type="checkbox" checked name="q[f[turn_downs]]" id="turn_downs" value="1" /><label for="turn_downs">Turn Downs</label><br />
+                  <input type="checkbox" checked name="q[f[undup_riders]]" id="undup_riders" value="1" /><label for="undup_riders">Undup Riders</label><br />
+                  <input type="checkbox" checked name="q[f[escort_volunteer_hours]]" id="escort_volunteer_hours" value="1" /><label for="escort_volunteer_hours">Escort Hours</label><br />
+                  <input type="checkbox" checked name="q[f[admin_volunteer_hours]]" id="admin_volunteer_hours" value="1" /><label for="admin_volunteer_hours">Admin Hours</label><br />
+                  <input type="checkbox" checked name="q[f[total_volunteer_hours]]" id="total_volunteer_hours" value="1" /><label for="total_volunteer_hours">Total Hours</label>
                 </div>
               </fieldset>
             </div>
