group by agency, not provider

--- a/app/views/network/show_create_report.html.erb
+++ b/app/views/network/show_create_report.html.erb
@@ -55,12 +55,12 @@
             <h3>Group By</h3>
             <div class="group-by-wrap">
               <select id="group-by" name="q[group_by]">
-                <option value="county,provider_id">County, Provider</option>
-                <option value="funding_source,county,provider_id,project_name">Funding Source, County, Provider, Project Name</option>
-                <option value="funding_source,county,provider_id">Funding Source, County, Provider</option>
-                <option value="funding_source,provider_id">Funding Source, Provider</option>
-                <option value="name,provider_id">Project Name, Provider</option>
-                <option value="provider_id,county,name">Provider, County, Project Name</option>
+                <option value="county,agency">County, Provider</option>
+                <option value="funding_source,county,agency,project_name">Funding Source, County, Provider, Project Name</option>
+                <option value="funding_source,county,agency">Funding Source, County, Provider</option>
+                <option value="funding_source,agency">Funding Source, Provider</option>
+                <option value="name,agency">Project Name, Provider</option>
+                <option value="agency,county,name">Provider, County, Project Name</option>
               </select>
             </div>
           </div>
