bulk updates for complete

--- a/app/views/layouts/summaries.html.erb
+++ b/app/views/layouts/summaries.html.erb
@@ -2,8 +2,11 @@
     <div id="crossbar">
       <div class="wrap selfclear">             
         <ul id="sitenav" class="selfclear">
-          <li><%= link_to "Create Summary", :action=>:show_create %></li>
           <li><%= link_to "View summaries", :action=>:index %></li>
+<% if current_user.is_admin %>
+          <li><%= link_to "Create Summary", :action=>:show_create %></li>
+          <li><%= link_to "Mark complete", :action=>:show_bulk_update %></li>
+<% end %>
         </ul>
       </div><!-- /.wrap -->
     </div><!-- /#crossbar -->
