--- a/app/views/trips/show_bulk_update.html.erb
+++ b/app/views/trips/show_bulk_update.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag :action=>:bulk_update, :method=>"POST" do  %>
 
-Mark all summaries complete for periods between
+Mark all runs complete for periods between
 <%= date_select :update, :start_date %> and 
 <%= date_select :update, :end_date %>
 <br/>
