--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,15 @@
 <html>
 <head>
   <title>Lowdown</title>
-  <%= stylesheet_link_tag 'application' %>
-  <%= stylesheet_link_tag 'ie' %>
-  <%= stylesheet_link_tag 'print-reset', :media=>"print" %>
   <%= stylesheet_link_tag 'screen-reset' %>
+  <!--[if lt IE 8]><%= stylesheet_link_tag 'ie' %><![endif]-->
+  <%= stylesheet_link_tag 'print-reset', :media=>"print" %>
+  
+  <%= stylesheet_link_tag 'ui.combobox.css' %>
+  <%= stylesheet_link_tag 'ui-custom/jquery-ui-1.8.6.custom.css' %>
+  <%= stylesheet_link_tag 'ui.spinner.css' %>
+  <%= stylesheet_link_tag 'ui.combobox.css' %>
+  
   <%= stylesheet_link_tag 'application' %>
 
   <%= javascript_include_tag 'jquery-1.4.2.min' %>
@@ -29,8 +34,12 @@
       </div>
     </div><!-- /.wrap -->
   </div><!-- /#header -->
+  <div id="crossbar">
+    <div class="wrap selfclear">             
+      <%= content_for?(:menu_bar) ? yield(:menu_bar) : '' %>
+    </div><!-- /.wrap -->
+  </div><!-- /#crossbar -->
 
-<%= content_for?(:menu_bar) ? yield(:menu_bar) : '' %>
 
    <div id="main">
      <div class="wrap selfclear">
