--- a/app/views/network/report.html.erb
+++ b/app/views/network/report.html.erb
@@ -9,7 +9,7 @@
            <thead>
              <tr>
                <th rowspan="2" colspan="<%= @group_fields.size - 1 %>"></th>
-               <th rowspan="2">Name</th>
+               <th rowspan="2"><%= @group_fields[-1] %></th>
 <% if @fields.member? 'funds' %><th rowspan="2">Funds</th><% end %>
 <% if @fields.member? 'agency_other' %><th rowspan="2">Agency Other</th><% end %>
 <% if @fields.member? 'vehicle_maint' %><th rowspan="2">Vechicle Maint.</th><% end %>
