fix up adjustment code, and add checkbox to view adjustments

--- a/app/views/network/report.html.erb
+++ b/app/views/network/report.html.erb
@@ -3,8 +3,7 @@
 	 Start: <%= @start_date %><br/>
 	 End: <%= @end_date %> <br/>
 
-   <%= link_to "CSV", @params.merge({:action=>:csv}) %>
-
+   <%= link_to "CSV", @params.merge({:action=>:csv}) %><br/>
          <table id="grouped-results">
            <thead>
              <tr>
