--- a/app/views/network/show_create_report.html.erb
+++ b/app/views/network/show_create_report.html.erb
@@ -68,5 +68,8 @@
               </select>
             </div>
           </div>
+
+	  <%= f.label :adjustment, :class => "checkbox" %> <%= f.check_box :adjustment %><br/>
+
           <input id="report-create" type="submit" value="Create Report" />
         <% end %><!-- end form -->
